[package]
name = "client"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@nilobject.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kludgine = {git = "https://github.com/khonsulabs/kludgine.git"}
yarws = "0.3"
tokio = {version = "0.2", features=["full"]}
shared = {path = "../shared"}
futures = "0.3"
bincode = "1.2"
serde = "1"
serde_derive="1"
webbrowser = "0.5"
uuid = "0.8"
crossbeam = "0.7"
dotenv = "0.15"
dirs="2"
toml="0.5"
atomicwrites = "0.2"