[package]
name = "server"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@nilobject.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
tokio = {version = "0.2", features=["macros"]}
shared = {path = "../shared"}
futures = "0.3"
bincode = "1.2"
serde = "1"
url = "2.1"
dotenv="0.15"
tera="1.2"
lazy_static="1.4"